--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 
 # The version of this overlay project
-version=6.5.0-SNAPSHOT
+version=6.4.0
 
 #CAS server version
-cas.version=6.5.0-SNAPSHOT
-springBootVersion=2.5.4
+cas.version=6.4.0
+springBootVersion=2.5.3
 
 group=org.apereo.cas
 artifactId=cas-overlay
