make LDAP working. start on services registry

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -8,3 +8,31 @@ server.ssl.enabled=true
 server.ssl.key-store=file:/etc/cas/cas.jks
 server.ssl.key-store-password=secret
 server.ssl.key-password=secret
+
+# disable default local user database
+cas.authn.accept.users=
+
+## LDAP auth sources
+cas.authn.ldap[0].name=Initial
+cas.authn.ldap[0].type=DIRECT
+cas.authn.ldap[0].pool-passivator=NONE
+# disable multiple DNs
+cas.authn.ldap[0].allow-multiple-dns=false
+cas.authn.ldap[0].ldap-url=ldaps://openldap.west:636
+cas.authn.ldap[0].base-dn=ou=users,ou=initial,dc=west
+cas.authn.ldap[0].dn-format=cn=%s,ou=users,ou=initial,dc=west
+# why this is required with DIRECT bind?..
+# CAS should connect to LDAP with user provided credentials
+cas.authn.ldap[0].bind-dn=cn=initial_viewer,ou=initial,dc=west
+cas.authn.ldap[0].bind-credential=alex
+# TLS certificate
+cas.authn.ldap[0].trust-certificates=file:/etc/ssl/certs/west.pem
+# Attributes
+cas.authn.ldap[0].principal-attribute-list=cn,unit
+cas.authn.attributeRepository.ldap[0].attributes.cn=cn
+cas.authn.attributeRepository.ldap[0].attributes.unit=initial
+
+
+## Services
+cas.service-registry.json.location=file:/etc/cas/services
+
