add services and update config

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -28,11 +28,18 @@ cas.authn.ldap[0].bind-credential=alex
 # TLS certificate
 cas.authn.ldap[0].trust-certificates=file:/etc/ssl/certs/west.pem
 # Attributes
-cas.authn.ldap[0].principal-attribute-list=cn,unit
-cas.authn.attributeRepository.ldap[0].attributes.cn=cn
-cas.authn.attributeRepository.ldap[0].attributes.unit=initial
+cas.authn.ldap[0].principal-attribute-list=unit
 
 
 ## Services
 cas.service-registry.json.location=file:/etc/cas/services
+# Auto generated keys from first CAS run
+cas.authn.oauth.access-token.crypto.encryption.key=YfSNRvQAMy4LB8PmAtUmRZgL-CBUbMUS8q8Gr7SuGXM
+cas.authn.oauth.access-token.crypto.signing.key=8VnlDwfNsNuU_cQMt2fCzy6H4NeWFDRAT7ht3IqVEhlSr24ivP_cKqzM8rO53jLY4LjDqG8suzImpa_Lwi6m0w
+cas.authn.oauth.crypto.encryption.key=LEHHyT0K7ZxrwS5Xs2huYaxUNJYWEjANn1CsdxPOrS8
+cas.authn.oauth.crypto.signing.key=C5_i1AiwuFOem3XxQtpxeHBOMFWXEgatFvbC5geEckNwLYD-3dLDGe_huLtk4rrLyy8behzjoJkB3xP3OEXdGg
+cas.tgc.crypto.encryption.key=qh2mY6gFcHrWN1UCAcECjT5hHXk4e4Z2u91LyGXX8mE
+cas.tgc.crypto.signing.key=XFPPzeaSSyw2M6q-8xgNjozX5FriGqidhIQL2HiJYYx_TWr5Ipp9NBPMVck99vKmR2Deob3LmfinC25lkzub3A
+cas.webflow.crypto.signing.key=kEGTEiGBrzcZ_3N9JNKzZABySajFRXFo_4ZCIGMdhWgk2xqtsQgduDSr3b_bZ6LsUUpBbVAlL4-HemLrCDxrvg
+cas.webflow.crypto.encryption.key=MeLIdPnKT3LQvM2abWuoig
 
